version/0.18/_sources/api/solver/_autosummary/settings/particle_species.rst.txt
:orphan:

.. _particle_species:

particle_species
================

.. autoclass:: ansys.fluent.core.solver.settings_232.particle_species.particle_species
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`droplet_particle_child <droplet_particle_child>`


.. rubric:: Included in:

==========================   ====================

Parent                                    Summary

==========================   ====================
:ref:`species <species_2>`       'species' child.

==========================   ====================

